# pass2_sim_analysis_clas12

./: .gitignore  CMakeLists.txt  README.md  clas12swif2_ana.sh  hipo2_root.sh  notes.txt  pass2_swif2_modified_clas12_ana.sh  swif2_hipo2root_modified.py
exe/: 5D_NOT_USED_RECENTLY_mPim_50_MeV_W_bin.cxx  5D_cs_more_inv_bins_mPim_50_MeV_W_bin.cxx  Modified_cs_with_14_inv_mass_bins.cpp  acc_corr  acc_cs_measure  accep  acceptance_corrected_cs_50_MeV_W_bins.cxx  bc_corr  bin_centering_check.cpp  clas12_analysis.cpp  clas12_analysis.hpp  clas12_mc.cpp  clas12_mc.hpp  cs_measure  cs_measure_m  det_ineff_plots.C  fitting_general.cxx  mod_cs_measure  new_run_q2_loop.sh  nine_1d_yields  pid_plots.cpp  raw_yields  run_q2_loop.sh  subtract_histograms.cpp  subtrct_hist  test_cs  test_cs_50_mev.cxx  theta_vs_mom_ratios.cpp
src/include/: boost_cms.hpp  branches.hpp  constants.hpp  cuts.hpp  deltat.hpp  eff_corr.hpp  histogram.hpp  mom_corr.hpp  physics.hpp  reaction.hpp
src/lib/: boost_cms.cpp  branches.cpp  cuts.cpp  deltat.cpp  eff_corr.cpp  energy_loss_corr.cpp  histogram.cpp  mom_corr.cpp  physics.cpp  reaction.cpp
